tests/NormalTests/paczka1/fuzzy1/72557586.err
Error in line 4: dCJWhR A277 81,6
Error in line 1: iewWMWedYE S820 32,0
Error in line 17: dCJWhR A601 68,3
Error in line 12: kMjF6KXR S312 58,0
Error in line 30: kMjF6KXR A277 2,1
Error in line 38: EnBB A277 65,1
Error in line 37: iewWMWedYE S312 81,6
